2007-08-05 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/print.rb: Uses Pango::Layout::WRAP_WORD_CHAR instead of
    Pango::Layout::WRAP_CHAR.

2007-08-02 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Better spacing between definitions.

    * lib/fantasdic/ui/print.rb: Checks that last page is not blank; if a new
    page is started and previous page's last line was a title, move it to the
    next page; fixes spacing between definitions.

2007-08-01 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui.rb: Requires print and some constants like SUPPORTS_IPC,
    SUPPORT_STATUS_ICON and SUPPORTS_PRINT.
    * lib/fantasdic/ui/print.rb: Added, pagination seems to work fine. It would
    be great to save the PageSetup and the PrintSettings in the config file.
    * lib/fantasdic/ui/main_app.rb: User interface.
    * data/fantasdic/ui/menus.xml: Menu entries.

    * TODO: Updated.

2007-07-30 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui.rb:
    * lib/fantasdic/ui/preferences_dialog.rb:
    * lib/fantasdic/ui/main_app.rb:
    * data/fantasdic/ui/popups.xml:
    Switch to Gtk::StatusIcon.
    Hide window on "Escape".
    New button "search" in the status icon popup-menu.

    * lib/fantasdic/ui/result_text_view.rb: search from the beginning of the
    text buffer when a new string is entered.

2007-03-18 Mathieu Blondel <mblondel@cvs.gnome.org>

    * AUTHORS:
    * lib/fantasdic.rb:
    Updated translator list

2007-03-01 Mathieu Blondel <mblondel@cvs.gnome.org>

    * tools/jmnedict2dictd.rb: Added JMnedict to dictd converter.

    * tools/jmdict2dictd.rb: Added JMdict to dictd converter.

    * tools/dictfmt.rb: Small fixes.

2007-02-28 Mathieu Blondel <mblondel@cvs.gnome.org>

    * tools/dictfmt.rb: This class will be used instead of the dictfmt
    command line tool (shipped with dictd). Its main advantage is that it can