@@ -3,6 +3,11 @@
     * lib/fantasdic/ui/print.rb: Uses Pango::Layout::WRAP_WORD_CHAR instead of
     Pango::Layout::WRAP_CHAR.
 
+    * lib/fantasdic/dict.rb:
+    * lib/fantasdic/ui/main_app.rb:
+    Switch the code to hold connections from main_app.rb to dict.rb. This is to
+    clean up main_app.rb (more coming).
+
 2007-08-02 Mathieu Blondel <mblondel@cvs.gnome.org>
 
     * lib/fantasdic/ui/main_app.rb: Better spacing between definitions.
